--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -144,6 +144,8 @@ $gray: #d8d8d8
     font-size: 30px
     color: $text
     +med
+    +r3
+      font-size: 24px
 
 .h3
   &_md
@@ -344,6 +346,8 @@ $gray: #d8d8d8
   letter-spacing: .08em
   line-height: 2
   display: block
+  +r3
+    letter-spacing: .05em
 
 .feedback
   border-bottom: 1px solid  $gray
@@ -374,6 +378,8 @@ $gray: #d8d8d8
       letter-spacing: .08em
       line-height: 2
       display: block
+      +r3
+        letter-spacing: .05em
   &__text
     font-size: 14px
     color: $text
