--- a/src/sass/new-styles-2/_applications.sass
+++ b/src/sass/new-styles-2/_applications.sass
@@ -94,6 +94,8 @@
     padding-top: 38px
   &__title
     margin-bottom: 25px
+    +r3
+      text-align: center
   &__map-tags
     text-align: center
     margin-bottom: 20px
