--- a/src/sass/new-styles-2/_catalog.sass
+++ b/src/sass/new-styles-2/_catalog.sass
@@ -97,7 +97,7 @@
       padding-top: 13px
       text-align: center
       padding-left: 20px
-      padding-right: 20px
+      padding-right: 20px    
     +r(584)
         // top: 97px 
         font-size: 14px 
@@ -152,6 +152,11 @@
     &.is-active
       text-decoration: underline
       color: #ff8c61
+  &_all
+    +r3
+      .filter-tag__wrap, .filter-tag
+        margin-right: 0
+        width: 100%
     
 
 
