--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -130,6 +130,8 @@
       +r3
         width: 100%
         margin-bottom: 11px
+    &.is-hidden
+      display: none
 
     &.is-mob-full
       +r3
