--- a/src/partials/applications-user.html
+++ b/src/partials/applications-user.html
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="request-item_big__block">
+    <div class="request-item_big__block has-mob-mb">
       <div class="request-item_big__left">
         <div class="request-item__contacts">
           <div class="request-item__contacts-field">
@@ -246,7 +246,7 @@
           <div class="request-item_big__wait-text">
             <p>Подтвердите волонтера!</p>
             <span class="add-time">Добавлено: 5 минут назад</span>
-            <div class="request-item_big-equal-cols__btns">
+            <div class="request-item_big-equal-cols__btns has-mob-mb">
               <a href="#" class="btn-full btn-full_grad-green"><span>Отменить заявку</span></a>
               <a href="#" class="catalog-item_short-hover__control has-no-underline js-open-popup" data-link="popup-account-user-2">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 20 20"><defs><path id="3uroa" d="M1157.18 593.93l3.32 3.33c.09.09.13.22.13.31s-.04.22-.13.31l-.62.62a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-3.33-3.32a.21.21 0 0 0-.3 0l-3.33 3.32a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-.62-.62a.48.48 0 0 1-.14-.31c0-.09.05-.22.14-.31l3.32-3.33a.21.21 0 0 0 0-.3l-3.32-3.33a.48.48 0 0 1-.14-.31c0-.1.05-.23.14-.31l.62-.62a.48.48 0 0 1 .3-.14c.1 0 .23.05.32.14l3.32 3.32c.1.09.22.09.31 0l3.33-3.32a.48.48 0 0 1 .31-.14.4.4 0 0 1 .31.14l.62.62c.09.08.13.22.13.3 0 .1-.04.23-.13.32l-3.32 3.32c-.1.05-.1.22 0 .31zm-1.42-9.93a9.73 9.73 0 0 0-9.76 9.76 9.73 9.73 0 0 0 9.76 9.75 9.73 9.73 0 0 0 9.75-9.75 9.73 9.73 0 0 0-9.75-9.76z"/></defs><g><g transform="translate(-1146 -584)"><use fill="#9b9b9b" xlink:href="#3uroa"/></g></g></svg>
@@ -399,7 +399,7 @@
       </div>
     </div>
 
-    <div class="request-item_big__block">
+    <div class="request-item_big__block has-mob-mb">
       <div class="request-item_big__left">
         <div class="request-item__contacts">
           <div class="request-item__contacts-field">
@@ -630,7 +630,7 @@
           <div class="request-item_big__wait-text">
             <p>Подтвердите волонтера!</p>
             <span class="add-time">Добавлено: 5 минут назад</span>
-            <div class="request-item_big-equal-cols__btns">
+            <div class="request-item_big-equal-cols__btns has-mob-mb">
               <a href="#" class="btn-full btn-full_grad-green js-open-popup" data-link="popup-account-2"><span>Отменить заявку</span></a>
               <a href="#" class="catalog-item_short-hover__control has-no-underline js-open-popup" data-link="popup-account-user-2">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 20 20"><defs><path id="3uroa" d="M1157.18 593.93l3.32 3.33c.09.09.13.22.13.31s-.04.22-.13.31l-.62.62a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-3.33-3.32a.21.21 0 0 0-.3 0l-3.33 3.32a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-.62-.62a.48.48 0 0 1-.14-.31c0-.09.05-.22.14-.31l3.32-3.33a.21.21 0 0 0 0-.3l-3.32-3.33a.48.48 0 0 1-.14-.31c0-.1.05-.23.14-.31l.62-.62a.48.48 0 0 1 .3-.14c.1 0 .23.05.32.14l3.32 3.32c.1.09.22.09.31 0l3.33-3.32a.48.48 0 0 1 .31-.14.4.4 0 0 1 .31.14l.62.62c.09.08.13.22.13.3 0 .1-.04.23-.13.32l-3.32 3.32c-.1.05-.1.22 0 .31zm-1.42-9.93a9.73 9.73 0 0 0-9.76 9.76 9.73 9.73 0 0 0 9.76 9.75 9.73 9.73 0 0 0 9.75-9.75 9.73 9.73 0 0 0-9.75-9.76z"/></defs><g><g transform="translate(-1146 -584)"><use fill="#9b9b9b" xlink:href="#3uroa"/></g></g></svg>
@@ -771,7 +771,7 @@
   <div class="applications__item js-tabs-item" data-tab="approved">
     <div class="request-item request-item_big request-item_big-equal-cols request-item_has-label">
 
-    <div class="request-item__label label"><span>Как можно раньше!</span></div>
+    <div class="request-item__label label has-mob-mb"><span>Как можно раньше!</span></div>
 
     <div class="request-item_big__top">
       <div class="request-item_big__title">
@@ -1013,7 +1013,7 @@
           <div class="request-item_big__wait-text">
             <p>Подтвердите волонтера!</p>
             <span class="add-time">Добавлено: 5 минут назад</span>
-            <div class="request-item_big-equal-cols__btns">
+            <div class="request-item_big-equal-cols__btns has-mob-mb">
               <a href="#" class="btn-full btn-full_grad-green js-open-popup" data-link="popup-account-2"><span>Отменить заявку</span></a>
               <a href="#" class="catalog-item_short-hover__control has-no-underline js-open-popup" data-link="popup-account-user-2">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 20 20"><defs><path id="3uroa" d="M1157.18 593.93l3.32 3.33c.09.09.13.22.13.31s-.04.22-.13.31l-.62.62a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-3.33-3.32a.21.21 0 0 0-.3 0l-3.33 3.32a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-.62-.62a.48.48 0 0 1-.14-.31c0-.09.05-.22.14-.31l3.32-3.33a.21.21 0 0 0 0-.3l-3.32-3.33a.48.48 0 0 1-.14-.31c0-.1.05-.23.14-.31l.62-.62a.48.48 0 0 1 .3-.14c.1 0 .23.05.32.14l3.32 3.32c.1.09.22.09.31 0l3.33-3.32a.48.48 0 0 1 .31-.14.4.4 0 0 1 .31.14l.62.62c.09.08.13.22.13.3 0 .1-.04.23-.13.32l-3.32 3.32c-.1.05-.1.22 0 .31zm-1.42-9.93a9.73 9.73 0 0 0-9.76 9.76 9.73 9.73 0 0 0 9.76 9.75 9.73 9.73 0 0 0 9.75-9.75 9.73 9.73 0 0 0-9.75-9.76z"/></defs><g><g transform="translate(-1146 -584)"><use fill="#9b9b9b" xlink:href="#3uroa"/></g></g></svg>
